# usecase/interfaces.go
@@ -13,4 +13,5 @@ type AuthUsecaseInterface interface {
 
 type UserUsecaseInterface interface {
 	CreateUser(ctx context.Context, payload generated.RegisterUserJSONRequestBody) (model.User, error)
+	GetUserProfile(ctx context.Context, userId int64) (model.User, error)
 }
